--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.5",
     "aos": "^2.3.4",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
@@ -31,10 +32,16 @@
     "gsap": "^3.11.5",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
+    "parallax": "^0.0.0",
+    "particles-bg": "^2.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.14.0"
+    "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.286",
+    "react-router-dom": "^6.14.0",
+    "react-tooltip": "^5.28.0",
+    "react-type-animation": "^3.2.0"
   }
 }
