Enhance Firebase hosting and build configuration
- Updated Firebase hosting config with long-term caching for static assets
- Added deployment scripts to package.json for Firebase hosting
- Configured Vite build options for optimized output and asset handling
- Introduced session management utility for improved user experience
- Updated RootLayout to handle first-time site visits more efficiently

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "firebase deploy"
   },
   "devDependencies": {
+    "fs-extra": "^11.2.0",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
